@@ -711,6 +711,13 @@ static int pdo_mysql_handle_factory(pdo_dbh_t *dbh, zval *driver_options TSRMLS_
 		goto cleanup;
 	}
 
+#ifdef PDO_MYSQL_HAS_CHARSET
+	if (vars[0].optval && mysql_set_character_set(H->server, vars[0].optval)) {
+		pdo_mysql_error(dbh);
+		goto cleanup;
+	}
+#endif
+
 	if (!dbh->auto_commit) {
 		mysql_handle_autocommit(dbh TSRMLS_CC);
 	}
